--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile 'com.ashokvarma.android:bottom-navigation-bar:2.0.4'
+    compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
+    compile 'com.github.anzaizai:EasySwipeMenuLayout:1.1.2'
+    compile 'com.github.anzaizai:EasyRefreshLayout:1.3.1'
 }
