--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.add_friends.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -20,16 +20,16 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:27.0.0'
+    implementation 'com.android.support:appcompat-v7:27.0.2'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.add_friends:runner:1.0.1'
-    androidTestImplementation 'com.android.support.add_friends.espresso:espresso-core:3.0.1'
+    //androidTestImplementation 'com.android.support.add_friends:runner:1.0.1'
+    //androidTestImplementation 'com.android.support.add_friends.espresso:espresso-core:3.0.1'
     compile 'com.ashokvarma.android:bottom-navigation-bar:2.0.4'
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
     compile 'com.github.anzaizai:EasySwipeMenuLayout:1.1.2'
     compile 'com.github.anzaizai:EasyRefreshLayout:1.3.1'
     compile 'com.baoyz.swipemenulistview:library:1.3.0'
-    implementation 'com.android.support:recyclerview-v7:27.0.0'
-    implementation 'com.android.support:design:27.0.0'
+    implementation 'com.android.support:recyclerview-v7:27.0.2'
+    implementation 'com.android.support:design:27.0.2'
 }
