--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     compile 'com.baoyz.swipemenulistview:library:1.3.0'
     implementation 'com.android.support:recyclerview-v7:27.0.2'
     implementation 'com.android.support:design:27.0.2'
+    compile 'com.github.stfalcon:multiimageview:0.1'
 }
