--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".mainactivity_5_linkman">
+
+        </activity>
+        <activity android:name=".mainactivity_6_my_meeting">
+
+        </activity>
     </application>
 
 </manifest>
