--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    useLibrary 'org.apache.http.legacy'
 }
 
 dependencies {
@@ -35,6 +36,8 @@ dependencies {
     compile 'com.github.stfalcon:multiimageview:0.1'
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'com.squareup.okhttp3:okhttp:3.9.1'
+    compile 'com.hyphenate:hyphenate-sdk-lite:3.3.0'
+    compile 'com.github.bumptech.glide:glide:3.8.0'
 
 
 }
