--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.9.1'
     //compile 'com.hyphenate:hyphenate-sdk-lite:3.3.0'
     compile 'com.github.bumptech.glide:glide:3.8.0'
+    compile 'com.netease.nimlib:basesdk:4.4.0'
 
 
 }
