--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,10 +8,28 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".LoginActivity"
-            android:label="@string/title_activity_login" />
-        <activity android:name=".Login2Activity"></activity>
+        <activity android:name=".Activity_03">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".Activity_01" />
+        <activity android:name=".Activity_04" />
+        <activity android:name=".Activity_05" />
+        <activity android:name=".Activity_06" />
+        <activity android:name=".Activity_07" />
+        <activity android:name=".Activity_08" />
+        <activity android:name=".Activity_09" />
+        <activity android:name=".Activity_10" />
+        <activity android:name=".Activity_11" />
+        <activity android:name=".Activity_12" />
+        <activity android:name=".Activity_13" />
+        <activity android:name=".Activity_14" />
+        <activity android:name=".Activity_15" />
+        <activity android:name=".Activity_02_2" />
+        <activity android:name=".Activity_12_2" />
     </application>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
