--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:27.0.2'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
+    compile project(path: ':uikit')
     //androidTestImplementation 'com.android.support.add_friends:runner:1.0.1'
     //androidTestImplementation 'com.android.support.add_friends.espresso:espresso-core:3.0.1'
     compile 'com.ashokvarma.android:bottom-navigation-bar:2.0.4'
