--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,9 @@ dependencies {
     //compile 'com.hyphenate:hyphenate-sdk-lite:3.3.0'
     compile 'com.github.bumptech.glide:glide:3.8.0'
     compile 'com.netease.nimlib:basesdk:4.4.0'
+    compile 'com.netease.nimlib:nrtc:4.4.0'
+    compile 'com.netease.nimlib:avchat:4.4.0'
+    compile 'com.netease.nimlib:chatroom:4.4.0'
 
 
 }
