--- a/uikit/build.gradle
+++ b/uikit/build.gradle
@@ -18,8 +18,8 @@ android {
         main {
             manifest.srcFile 'AndroidManifest.xml'
             java.srcDirs = ['src']
-            resources.srcDirs = ['src']
-            aidl.srcDirs = ['src']
+           resources.srcDirs = ['src']
+           aidl.srcDirs = ['src']
             renderscript.srcDirs = ['src']
             res.srcDirs = ['res', 'res-ptr2', 'res-chatroom']
             assets.srcDirs = ['assets']
@@ -47,6 +47,12 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.2.0'
     api 'jp.wasabeef:glide-transformations:3.0.1'
     //api 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1' // if you want to use the Glide GPU Filters
+    api 'com.netease.nimlib:basesdk:4.9.0'
+    api 'com.netease.nimlib:nrtc:4.9.0'
+    api 'com.netease.nimlib:avchat:4.9.0'
+    api 'com.netease.nimlib:chatroom:4.9.0'
+    api 'com.netease.nimlib:lucene:4.9.0'
+
 
 
 
