--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     compile 'com.netease.nimlib:nrtc:4.4.0'
     compile 'com.netease.nimlib:avchat:4.4.0'
     compile 'com.netease.nimlib:chatroom:4.4.0'
+    compile 'com.tsy:myokhttp:1.0.1'
 
 
 }
