--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,7 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'com.squareup.okhttp3:okhttp:3.9.1'
     //compile 'com.hyphenate:hyphenate-sdk-lite:3.3.0'
-    compile 'com.github.bumptech.glide:glide:3.8.0'
+    compile 'com.github.bumptech.glide:glide:3.5.0'
     compile 'com.netease.nimlib:basesdk:4.4.0'
     compile 'com.netease.nimlib:nrtc:4.4.0'
     compile 'com.netease.nimlib:avchat:4.4.0'
@@ -51,6 +51,7 @@ dependencies {
     compile 'com.tsy:myokhttp:1.1.0'
     compile 'cn.bingoogolapple:bga-banner:2.1.7@aar'
     compile 'cn.bingoogolapple:bga-badgeview:1.1.3@aar'
+    compile 'jp.wasabeef:glide-transformations:3.0.1'
 
 
 }
