--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:27.0.2'
+    compile 'com.android.support:support-v4:27.0.1'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
     compile project(path: ':uikit')
@@ -43,7 +44,8 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'com.squareup.okhttp3:okhttp:3.9.1'
     //compile 'com.hyphenate:hyphenate-sdk-lite:3.3.0'
-    compile 'com.github.bumptech.glide:glide:3.5.0'
+    compile 'com.github.bumptech.glide:glide:4.2.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.2.0'
     compile 'com.netease.nimlib:basesdk:4.4.0'
     compile 'com.netease.nimlib:nrtc:4.4.0'
     compile 'com.netease.nimlib:avchat:4.4.0'
