--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,8 +44,8 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'com.squareup.okhttp3:okhttp:3.9.1'
     //compile 'com.hyphenate:hyphenate-sdk-lite:3.3.0'
-    compile 'com.github.bumptech.glide:glide:4.2.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.2.0'
+    compile 'com.github.bumptech.glide:glide:4.0.0'
+    //annotationProcessor 'com.github.bumptech.glide:compiler:4.2.0'
     compile 'com.netease.nimlib:basesdk:4.4.0'
     compile 'com.netease.nimlib:nrtc:4.4.0'
     compile 'com.netease.nimlib:avchat:4.4.0'
@@ -55,6 +55,8 @@ dependencies {
     compile 'cn.bingoogolapple:bga-badgeview:1.1.3@aar'
     compile 'jp.wasabeef:glide-transformations:3.0.1'
     compile 'com.miguelcatalan:materialsearchview:1.4.0'
+    compile 'com.allenliu.badgeview:library:1.1.1'
+
 
 
 
