--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,10 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
+        ndk {
+            //设置支持的SO库架构
+            abiFilters "armeabi-v7a", "x86","arm64-v8a","x86_64"
+        }
 
     }
     buildTypes {
@@ -49,13 +53,13 @@ dependencies {
 
     //annotationProcessor 'com.github.bumptech.glide:compiler:4.2.0'
     compile 'com.netease.nimlib:basesdk:4.4.0'
-    compile 'com.netease.nimlib:nrtc:4.4.0'
-    compile 'com.netease.nimlib:avchat:4.4.0'
-    compile 'com.netease.nimlib:chatroom:4.4.0'
-    compile 'com.tsy:myokhttp:1.1.0'
+
+
+    //compile 'com.tsy:myokhttp:1.1.0'
     compile 'cn.bingoogolapple:bga-banner:2.1.7@aar'
     compile 'cn.bingoogolapple:bga-badgeview:1.1.3@aar'
     compile 'jp.wasabeef:glide-transformations:3.0.1'
     compile 'com.miguelcatalan:materialsearchview:1.4.0'
     compile 'com.allenliu.badgeview:library:1.1.1'
+    compile 'com.alibaba:fastjson:1.1.68.android'
 }
