--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,11 +50,8 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.9.1'
     //compile 'com.hyphenate:hyphenate-sdk-lite:3.3.0'
     compile 'com.github.bumptech.glide:glide:4.2.0'
-
     //annotationProcessor 'com.github.bumptech.glide:compiler:4.2.0'
     compile 'com.netease.nimlib:basesdk:4.4.0'
-
-
     //compile 'com.tsy:myokhttp:1.1.0'
     compile 'cn.bingoogolapple:bga-banner:2.1.7@aar'
     compile 'cn.bingoogolapple:bga-badgeview:1.1.3@aar'
@@ -63,4 +60,5 @@ dependencies {
     compile 'com.allenliu.badgeview:library:1.1.1'
     compile 'com.alibaba:fastjson:1.1.68.android'
     compile 'com.github.addappcn:android-pickers:1.0.3'
+    implementation project(':uikit')
 }
